web-infras/parser/tests/fixtures/self-added/let-as-identifier/module/let-as-value-in-pattern-2/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,8)
1|var {a:let} = {}
 |      ^
